--- a/MyMusic/Search/TrackDetailView/TrackDetailView.xib
+++ b/MyMusic/Search/TrackDetailView/TrackDetailView.xib
@@ -16,7 +16,7 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="IJT-Ob-Teb">
-                    <rect key="frame" x="30" y="47" width="330" height="733"/>
+                    <rect key="frame" x="30" y="0.0" width="330" height="814"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h5f-Ac-cRI">
                             <rect key="frame" x="0.0" y="0.0" width="330" height="44"/>
@@ -73,7 +73,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j34-9I-Kg8">
-                                    <rect key="frame" x="0.0" y="28.666666666666629" width="330" height="28.666666666666671"/>
+                                    <rect key="frame" x="0.0" y="28.666666666666686" width="330" height="28.666666666666671"/>
                                     <fontDescription key="fontDescription" type="system" weight="light" pointSize="24"/>
                                     <color key="textColor" red="0.90980392156862744" green="0.27058823529411763" blue="0.3529411764705882" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                     <nil key="highlightedColor"/>
@@ -81,18 +81,18 @@
                             </subviews>
                         </stackView>
                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="JbJ-0W-WiP">
-                            <rect key="frame" x="0.0" y="519.33333333333337" width="330" height="186.66666666666663"/>
+                            <rect key="frame" x="0.0" y="519.33333333333337" width="330" height="267.66666666666663"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jK3-C4-S7G">
-                                    <rect key="frame" x="0.0" y="76.333333333333258" width="110" height="34"/>
+                                    <rect key="frame" x="0.0" y="117" width="110" height="34"/>
                                     <state key="normal" title="Button"/>
                                     <buttonConfiguration key="configuration" style="plain" image="Left"/>
                                     <connections>
-                                        <action selector="previousTrackButton:" destination="1qg-kn-r5q" eventType="touchUpInside" id="TRa-lH-7KO"/>
+                                        <action selector="previousTrack:" destination="1qg-kn-r5q" eventType="touchUpInside" id="h3f-qH-I5J"/>
                                     </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S9i-t4-dsv">
-                                    <rect key="frame" x="110" y="58" width="110" height="71"/>
+                                    <rect key="frame" x="110" y="98.333333333333258" width="110" height="71"/>
                                     <state key="normal" title="Button"/>
                                     <buttonConfiguration key="configuration" style="plain" image="pause"/>
                                     <connections>
@@ -100,7 +100,7 @@
                                     </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="68v-2r-mla">
-                                    <rect key="frame" x="220" y="76.333333333333258" width="110" height="34"/>
+                                    <rect key="frame" x="220" y="117" width="110" height="34"/>
                                     <state key="normal" title="Button"/>
                                     <buttonConfiguration key="configuration" style="plain" image="Right"/>
                                     <connections>
@@ -110,7 +110,7 @@
                             </subviews>
                         </stackView>
                         <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Hlc-Xg-SbA">
-                            <rect key="frame" x="0.0" y="716" width="330" height="17"/>
+                            <rect key="frame" x="0.0" y="797" width="330" height="17"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icon Min" translatesAutoresizingMaskIntoConstraints="NO" id="ccA-PH-ayA">
                                     <rect key="frame" x="0.0" y="0.0" width="17" height="17"/>
