--- a/MyMusic/Search/TrackDetailView/TrackDetailView.xib
+++ b/MyMusic/Search/TrackDetailView/TrackDetailView.xib
@@ -15,8 +15,72 @@
             <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="IJT-Ob-Teb">
-                    <rect key="frame" x="30" y="0.0" width="330" height="814"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qo4-C6-qPN">
+                    <rect key="frame" x="0.0" y="47" width="390" height="64"/>
+                    <subviews>
+                        <view alpha="0.59999999999999998" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B4d-3M-mT3">
+                            <rect key="frame" x="0.0" y="0.0" width="390" height="1"/>
+                            <color key="backgroundColor" systemColor="systemGray2Color"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="1" id="ox6-Xq-M0h"/>
+                            </constraints>
+                        </view>
+                        <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="USd-Vr-noP">
+                            <rect key="frame" x="8" y="8" width="374" height="48"/>
+                            <subviews>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image" translatesAutoresizingMaskIntoConstraints="NO" id="f5v-q1-5LA">
+                                    <rect key="frame" x="0.0" y="0.0" width="48" height="48"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="48" id="Z5W-4I-11l"/>
+                                    </constraints>
+                                </imageView>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Track title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zZv-2X-FoT">
+                                    <rect key="frame" x="64" y="0.0" width="186" height="48"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x4w-py-KNJ">
+                                    <rect key="frame" x="266" y="0.0" width="44" height="48"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="44" id="lqq-7P-hEK"/>
+                                    </constraints>
+                                    <color key="tintColor" systemColor="labelColor"/>
+                                    <state key="normal" title="Button"/>
+                                    <buttonConfiguration key="configuration" style="plain" image="pause"/>
+                                    <connections>
+                                        <action selector="playPauseAction:" destination="1qg-kn-r5q" eventType="touchUpInside" id="5D3-oP-Erv"/>
+                                    </connections>
+                                </button>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sa9-Jn-0IG">
+                                    <rect key="frame" x="326" y="0.0" width="48" height="48"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="48" id="b5Q-aV-faH"/>
+                                    </constraints>
+                                    <color key="tintColor" systemColor="labelColor"/>
+                                    <state key="normal" title="Button"/>
+                                    <buttonConfiguration key="configuration" style="plain" image="Right"/>
+                                    <connections>
+                                        <action selector="nextTrack:" destination="1qg-kn-r5q" eventType="touchUpInside" id="YTR-EL-JxT"/>
+                                    </connections>
+                                </button>
+                            </subviews>
+                        </stackView>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemGray5Color"/>
+                    <constraints>
+                        <constraint firstAttribute="bottom" secondItem="USd-Vr-noP" secondAttribute="bottom" constant="8" id="58m-uh-bUp"/>
+                        <constraint firstItem="B4d-3M-mT3" firstAttribute="top" secondItem="qo4-C6-qPN" secondAttribute="top" id="7rY-VX-OGt"/>
+                        <constraint firstAttribute="trailing" secondItem="B4d-3M-mT3" secondAttribute="trailing" id="FvT-Do-4P5"/>
+                        <constraint firstItem="USd-Vr-noP" firstAttribute="leading" secondItem="qo4-C6-qPN" secondAttribute="leading" constant="8" id="HlO-eV-III"/>
+                        <constraint firstItem="B4d-3M-mT3" firstAttribute="leading" secondItem="qo4-C6-qPN" secondAttribute="leading" id="Va0-F6-kUT"/>
+                        <constraint firstItem="USd-Vr-noP" firstAttribute="top" secondItem="qo4-C6-qPN" secondAttribute="top" constant="8" id="fjF-mY-tRk"/>
+                        <constraint firstAttribute="trailing" secondItem="USd-Vr-noP" secondAttribute="trailing" constant="8" id="mmB-YM-coR"/>
+                        <constraint firstAttribute="height" constant="64" id="oV8-8G-7mY"/>
+                    </constraints>
+                </view>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="IJT-Ob-Teb">
+                    <rect key="frame" x="30" y="47" width="330" height="733"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h5f-Ac-cRI">
                             <rect key="frame" x="0.0" y="0.0" width="330" height="44"/>
@@ -30,13 +94,13 @@
                             </connections>
                         </button>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QZc-w0-RfS">
-                            <rect key="frame" x="0.0" y="54" width="330" height="330"/>
+                            <rect key="frame" x="0.0" y="44" width="330" height="330"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="QZc-w0-RfS" secondAttribute="height" multiplier="1:1" id="RIc-5j-HWP"/>
                             </constraints>
                         </imageView>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="un1-ux-raA">
-                            <rect key="frame" x="0.0" y="394" width="330" height="48"/>
+                            <rect key="frame" x="0.0" y="374" width="330" height="48"/>
                             <subviews>
                                 <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="RHw-MY-zGq">
                                     <rect key="frame" x="-2" y="0.0" width="334" height="31"/>
@@ -64,7 +128,7 @@
                             </subviews>
                         </stackView>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="6Bq-o0-jlh">
-                            <rect key="frame" x="0.0" y="452" width="330" height="57.333333333333314"/>
+                            <rect key="frame" x="0.0" y="422" width="330" height="57.333333333333314"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Track title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XEI-Op-t9r">
                                     <rect key="frame" x="0.0" y="0.0" width="330" height="28.666666666666668"/>
@@ -81,10 +145,10 @@
                             </subviews>
                         </stackView>
                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="JbJ-0W-WiP">
-                            <rect key="frame" x="0.0" y="519.33333333333337" width="330" height="267.66666666666663"/>
+                            <rect key="frame" x="0.0" y="479.33333333333343" width="330" height="236.66666666666669"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jK3-C4-S7G">
-                                    <rect key="frame" x="0.0" y="117" width="110" height="34"/>
+                                    <rect key="frame" x="0.0" y="101.33333333333326" width="110" height="34"/>
                                     <state key="normal" title="Button"/>
                                     <buttonConfiguration key="configuration" style="plain" image="Left"/>
                                     <connections>
@@ -92,7 +156,7 @@
                                     </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S9i-t4-dsv">
-                                    <rect key="frame" x="110" y="98.333333333333258" width="110" height="71"/>
+                                    <rect key="frame" x="110" y="83" width="110" height="71"/>
                                     <state key="normal" title="Button"/>
                                     <buttonConfiguration key="configuration" style="plain" image="pause"/>
                                     <connections>
@@ -100,7 +164,7 @@
                                     </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="68v-2r-mla">
-                                    <rect key="frame" x="220" y="117" width="110" height="34"/>
+                                    <rect key="frame" x="220" y="101.33333333333326" width="110" height="34"/>
                                     <state key="normal" title="Button"/>
                                     <buttonConfiguration key="configuration" style="plain" image="Right"/>
                                     <connections>
@@ -110,7 +174,7 @@
                             </subviews>
                         </stackView>
                         <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Hlc-Xg-SbA">
-                            <rect key="frame" x="0.0" y="797" width="330" height="17"/>
+                            <rect key="frame" x="0.0" y="716" width="330" height="17"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icon Min" translatesAutoresizingMaskIntoConstraints="NO" id="ccA-PH-ayA">
                                     <rect key="frame" x="0.0" y="0.0" width="17" height="17"/>
@@ -140,7 +204,10 @@
             <viewLayoutGuide key="safeArea" id="fqA-ZG-X77"/>
             <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
             <constraints>
+                <constraint firstItem="qo4-C6-qPN" firstAttribute="top" secondItem="fqA-ZG-X77" secondAttribute="top" id="20u-1g-Bjk"/>
                 <constraint firstItem="fqA-ZG-X77" firstAttribute="bottom" secondItem="IJT-Ob-Teb" secondAttribute="bottom" constant="30" id="GLl-eM-Uby"/>
+                <constraint firstItem="fqA-ZG-X77" firstAttribute="trailing" secondItem="qo4-C6-qPN" secondAttribute="trailing" id="erC-UL-Ihz"/>
+                <constraint firstItem="qo4-C6-qPN" firstAttribute="leading" secondItem="fqA-ZG-X77" secondAttribute="leading" id="g8x-Gm-NKU"/>
                 <constraint firstItem="fqA-ZG-X77" firstAttribute="trailing" secondItem="IJT-Ob-Teb" secondAttribute="trailing" constant="30" id="kVV-yo-OF4"/>
                 <constraint firstItem="IJT-Ob-Teb" firstAttribute="leading" secondItem="fqA-ZG-X77" secondAttribute="leading" constant="30" id="pum-ox-tma"/>
                 <constraint firstItem="IJT-Ob-Teb" firstAttribute="top" secondItem="fqA-ZG-X77" secondAttribute="top" id="raB-y1-hSh"/>
@@ -150,6 +217,12 @@
                 <outlet property="currentTimeLabel" destination="2nj-bT-pjY" id="Ng7-Cx-Iny"/>
                 <outlet property="currentTimeSlider" destination="RHw-MY-zGq" id="stk-ac-E2h"/>
                 <outlet property="durationLabel" destination="75P-hY-CJY" id="8Hu-7n-ugs"/>
+                <outlet property="maximizedStackView" destination="IJT-Ob-Teb" id="LXx-7T-Fal"/>
+                <outlet property="miniGoForwardButton" destination="sa9-Jn-0IG" id="LB1-y2-rSb"/>
+                <outlet property="miniPlayPauseButton" destination="x4w-py-KNJ" id="vT3-Jw-Pa5"/>
+                <outlet property="miniTrackImageView" destination="f5v-q1-5LA" id="ocO-kz-gfk"/>
+                <outlet property="miniTrackTitleLabel" destination="zZv-2X-FoT" id="56b-5k-O5y"/>
+                <outlet property="miniTrackView" destination="qo4-C6-qPN" id="T2z-rv-Ngk"/>
                 <outlet property="playPauseButton" destination="S9i-t4-dsv" id="WzR-2O-oGQ"/>
                 <outlet property="trackImageView" destination="QZc-w0-RfS" id="0Bn-39-XBY"/>
                 <outlet property="trackTitleLabel" destination="XEI-Op-t9r" id="2mm-Fz-xL0"/>
@@ -164,9 +237,19 @@
         <image name="IconMax" width="17" height="17"/>
         <image name="Left" width="34" height="20"/>
         <image name="Right" width="34" height="20"/>
+        <image name="image" width="54.333332061767578" height="54.333332061767578"/>
         <image name="pause" width="57" height="57"/>
+        <systemColor name="labelColor">
+            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="secondarySystemBackgroundColor">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGray2Color">
+            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGray5Color">
+            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
